## Process this file with automake to generate Makefile.in


# Copyright 1991, 1993, 1994, 1996, 1997, 1999, 2000 Free Software
# Foundation, Inc.
#
# This file is part of the GNU MP Library.
#
# The GNU MP Library is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at your
# option) any later version.
#
# The GNU MP Library is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
# License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
# MA 02111-1307, USA.


# make check
#
#     It'd be good if "make check" first did a "make all" or whatever to
#     build libgmp.la, but it's not clear how best to do this.  Putting a
#     "check:" target is overridden by automake, and a "check-local:" runs
#     too late (due to depth-first subdirectory processing).  For now it's
#     necessary to do "make && make check".


# Libtool -version-info for libgmp.la and libmp.la.  See (libtool)Versioning
#
# 1. No interfaces changed, only implementations (good): Increment REVISION.
#
# 2. Interfaces added, none removed (good): Increment CURRENT, increment
#    AGE, set REVISION to 0.
#
# 3. Interfaces removed (BAD, breaks upward compatibility): Increment
#    CURRENT, set AGE and REVISION to 0.
#
# Do this separately for libgmp and libmp, only do it just before a release.
#
#	  GMP	   -version-info
#	release   libgmp  libmp
#	 2.0.x      -       -
#	 3.0      3:0:0   3:0:0
#        3.0.1    3:1:0   3:0:0
#        3.1      4:0:1   4:0:1
#        3.1.1    4:1:1   4:1:1
#        3.2      5:0:2   4:2:1
#
# Starting at 3:0:0 is a slight abuse of the versioning system, but it
# ensures we're past soname libgmp.so.2, which was used on Debian GNU/Linux
# packages of gmp 2.  Pretend gmp 2 was 2:0:0, so the interface changes for
# gmp 3 mean 3:0:0 is right.

LIBGMP_LT_CURRENT =  5
LIBGMP_LT_REVISION = 0
LIBGMP_LT_AGE =      2

LIBMP_LT_CURRENT =  4
LIBMP_LT_REVISION = 2
LIBMP_LT_AGE =      1


AUTOMAKE_OPTIONS = gnu check-news no-dependencies ansi2knr

# "tests" ahead of "mpfr" ensures tests/t-constants is run before the
# mpfr/tests programs.
#
SUBDIRS = tests mpn mpz mpq mpf mpbsd mpfr demos tune

nodist_include_HEADERS = gmp.h $(MPBSD_HEADERS_OPTION)
lib_LTLIBRARIES = libgmp.la $(MPBSD_LTLIBRARIES_OPTION)

EXTRA_DIST = doc macos \
  configfsf.guess configfsf.sub .gdbinit gmp-h.in gmp-impl.h mp-h.in \
  INSTALL.autoconf longlong.h stack-alloc.h urandom.h

DISTCLEANFILES = $(nodist_include_HEADERS) asm-syntax.h config.m4 \
  @gmp_srclinks@

# Generated by current texinfo.tex when processing gmp.texi.
# FIXME: Maybe this should be added to automake.
MOSTLYCLEANFILES= gmp.tmp


libgmp_la_SOURCES =							\
  assert.c compat.c errno.c extract-dbl.c insert-dbl.c memory.c		\
  mp_bpl.c mp_clz_tab.c mp_minv_tab.c mp_set_fns.c			\
  rand.c randclr.c randlc.c randlc2x.c randraw.c randsd.c randsdui.c	\
  stack-alloc.c version.c 
libgmp_la_LIBADD = mpz/libmpz.la mpq/libmpq.la mpf/libmpf.la mpn/libmpn.la
libgmp_la_LDFLAGS = $(GMP_LDFLAGS) \
  -version-info $(LIBGMP_LT_CURRENT):$(LIBGMP_LT_REVISION):$(LIBGMP_LT_AGE)


if WANT_MPBSD
MPBSD_HEADERS_OPTION = mp.h
MPBSD_LTLIBRARIES_OPTION = libmp.la
endif
libmp_la_SOURCES = assert.c errno.c memory.c mp_bpl.c mp_clz_tab.c	\
  mp_minv_tab.c mp_set_fns.c stack-alloc.c

# These selected mpz objects support mpz/powm.c (built as mpbsd/powm.lo) and
# can probably be removed when that switches to an mpn implementation.
#
libmp_la_LIBADD = mpbsd/libmpbsd.la mpn/libmpn.la			\
  mpz/add$U.lo mpz/clear$U.lo mpz/cmp$U.lo mpz/init$U.lo mpz/mod$U.lo	\
  mpz/mul$U.lo mpz/mul_2exp$U.lo mpz/realloc$U.lo mpz/set$U.lo		\
  mpz/set_ui$U.lo mpz/tdiv_r$U.lo mpz/sub$U.lo
libmp_la_LDFLAGS = $(GMP_LDFLAGS) \
  -version-info $(LIBMP_LT_CURRENT):$(LIBMP_LT_REVISION):$(LIBMP_LT_AGE)


info_TEXINFOS = gmp.texi


# Don't ship CVS directories or emacs backups.
dist-hook:
	-find $(distdir) \( -name CVS -type d \) -o -name "*.~*" \
		| xargs rm -rf
